Bug 509115 - Unreal Engine Blueprints right click search menu
Summary: Unreal Engine Blueprints right click search menu
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.4.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 459989 511679 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-04 17:17 UTC by Znmop
Modified: 2026-01-21 20:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Znmop 2025-09-04 17:17:26 UTC
SUMMARY
It's not possible to type inside the popup search window inside blueprints unless you give Legacy X11 App Support always permission.
https://discuss.kde.org/t/enhancement-request-better-x11-keystroke-compatibility-for-professional-software/36825
https://forums.unrealengine.com/t/i-cannot-type-inside-the-blueprint-action-window/2078805
https://forums.unrealengine.com/t/unreal-engine-5-x-under-linux-search-in-blueprints-not-working/782597/4
https://forums.unrealengine.com/t/ue5-3-cannot-input-text-find-function-on-linux-wayland/1799561/5

STEPS TO REPRODUCE
1.  Open any blueprint
2.  Right click to open search menu
3.  Type inside the window without relying on any gimmick that forces the popup window to gain focus

OBSERVED RESULT
Nothing gets typed in the search bar

EXPECTED RESULT
Letters/numbers appearing inside the menu

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.2

ADDITIONAL INFORMATION
Some users have found several gimmicks to circumvent this problem such as moving the cursor to the top left and then selecting the editor or right click inside the search box then left click to regain focus.
Comment 1 TraceyC 2025-09-16 01:00:45 UTC
Moving to kwin, which is responsible for UI windows
Comment 2 Zamundaaa 2025-09-16 15:37:05 UTC
Please report this issue to Unreal engine. As a Wayland native application, you're not supposed to use X11 for anything... especially not for input while the window in question is not focused.
Comment 3 Zamundaaa 2025-09-16 16:01:04 UTC
Hmm, sorry, I was corrected, UE is still an X11 app. I can't explain the bug in that case though.
Comment 4 Nate Graham 2025-09-16 22:22:01 UTC
Seems like it's still an app bug, no?
Comment 5 Zamundaaa 2025-09-22 12:14:25 UTC
Could be, but we need more information to be sure.
Comment 6 Zamundaaa 2025-11-06 15:34:53 UTC
*** Bug 511679 has been marked as a duplicate of this bug. ***
Comment 7 Bug Janitor Service 2025-11-06 16:15:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8377
Comment 8 Zamundaaa 2025-11-18 23:57:46 UTC
Git commit 4dd843cc025fd1c6602cefd532b5c9566c77ff4a by Xaver Hugl.
Committed on 18/11/2025 at 23:13.
Pushed by zamundaaa into branch 'master'.

events: ignore XCB_FOCUS_OUT events by default

They cause problems with some applications that do questionable things with
override redirect windows. As the event is only needed for other questionable
application behavior (apps rejecting focus), and wlroots doesn't seem to need
it either, ignore the event entirely.

If any problems arise, KWIN_ENABLE_FOCUS_OUT=1 can be set to get the old
behavior back.

M  +10   -0    src/events.cpp

https://invent.kde.org/plasma/kwin/-/commit/4dd843cc025fd1c6602cefd532b5c9566c77ff4a
Comment 9 Zamundaaa 2025-11-28 11:59:10 UTC
Git commit 2abb4b24bb924ed65628c029dd9dd3e65afec623 by Xaver Hugl.
Committed on 28/11/2025 at 00:56.
Pushed by zamundaaa into branch 'Plasma/6.5'.

events: ignore XCB_FOCUS_OUT events by default

They cause problems with some applications that do questionable things with
override redirect windows. As the event is only needed for other questionable
application behavior (apps rejecting focus), and wlroots doesn't seem to need
it either, ignore the event entirely.

If any problems arise, KWIN_ENABLE_FOCUS_OUT=1 can be set to get the old
behavior back.


(cherry picked from commit 4dd843cc025fd1c6602cefd532b5c9566c77ff4a)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +10   -0    src/events.cpp

https://invent.kde.org/plasma/kwin/-/commit/2abb4b24bb924ed65628c029dd9dd3e65afec623
Comment 10 Zamundaaa 2026-01-21 20:29:03 UTC
*** Bug 459989 has been marked as a duplicate of this bug. ***