events: ignore XCB_FOCUS_OUT events by default

They cause problems with some applications that do questionable things with
override redirect windows. As the event is only needed for other questionable
application behavior (apps rejecting focus), and wlroots doesn't seem to need
it either, ignore the event entirely.

If any problems arise, KWIN_ENABLE_FOCUS_OUT=1 can be set to get the old
behavior back.

BUG: 509115